<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VerEntrenador" android:background="#9A646060">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txv_nom_Entrenador" android:autofillHints="@string/ce_nombre"
            android:hint="@string/ce_nombre"
            app:layout_constraintStart_toStartOf="@+id/txv_idEntrenador"
            app:layout_constraintEnd_toEndOf="@+id/txv_idEntrenador" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_idEntrenador" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txv_ape_Entrenador" android:autofillHints="@string/ce_apellido"
            android:hint="@string/ce_apellido"
            app:layout_constraintStart_toStartOf="@+id/txv_nom_Entrenador"
            app:layout_constraintEnd_toEndOf="@+id/txv_nom_Entrenador" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_nom_Entrenador" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="209dp"
            android:layout_height="41dp"
            android:id="@+id/txv_idEntrenador" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintVertical_bias="0.129"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txv_fecha_entrenador" android:autofillHints="@string/ce_fechanac"
            android:hint="@string/ce_fechanac"
            app:layout_constraintStart_toStartOf="@+id/txv_ape_Entrenador"
            app:layout_constraintEnd_toEndOf="@+id/txv_ape_Entrenador" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_ape_Entrenador" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txv_medalla_entrenador" android:autofillHints="@string/ce_medallas"
            android:hint="@string/ce_medallas"
            app:layout_constraintStart_toStartOf="@+id/txv_fecha_entrenador"
            app:layout_constraintEnd_toEndOf="@+id/txv_fecha_entrenador" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_fecha_entrenador" app:layout_constraintHorizontal_bias="0.0"/>
    <Switch
            android:text="@string/ce_campeon"
            android:layout_width="156dp"
            android:layout_height="27dp"
            android:id="@+id/switch_campeon" app:layout_constraintStart_toStartOf="@+id/txv_medalla_entrenador"
            app:layout_constraintEnd_toEndOf="@+id/txv_medalla_entrenador" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_medalla_entrenador"
            app:layout_constraintHorizontal_bias="0.421"/>
    <Button
            android:text="@string/ve_ver_pokemones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ver_listaPokemon" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.12"
            android:layout_marginBottom="200dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/ve_crear_pokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_crearPokemon"
            app:layout_constraintTop_toTopOf="@+id/btn_eliminarEntrenador" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_eliminarEntrenador"
            app:layout_constraintBottom_toBottomOf="@+id/btn_eliminarEntrenador"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/ve_editar_entrenador"
            android:layout_width="185dp"
            android:layout_height="43dp"
            android:id="@+id/btn_editarEntrenador"
            app:layout_constraintStart_toEndOf="@+id/btn_ver_listaPokemon" android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@+id/btn_ver_listaPokemon"
            app:layout_constraintBottom_toBottomOf="@+id/btn_ver_listaPokemon"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/ve_eliminar_ent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_eliminarEntrenador" app:layout_constraintStart_toStartOf="@+id/btn_editarEntrenador"
            app:layout_constraintEnd_toEndOf="@+id/btn_editarEntrenador" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_editarEntrenador" app:layout_constraintHorizontal_bias="1.0"/>
</android.support.constraint.ConstraintLayout>