<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VerPokemon" android:background="#9A646060">

    <TextView
            android:layout_width="213dp"
            android:layout_height="46dp"
            android:id="@+id/txv_idPokemon" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.373" app:layout_constraintVertical_bias="0.13"
            android:textStyle="bold" android:textAlignment="center"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txv_vp_poderuno" android:autofillHints="@string/cp_poderuno"
            android:hint="@string/cp_poderuno"
            app:layout_constraintStart_toStartOf="@+id/txv_nom_Pokemon"
            app:layout_constraintEnd_toEndOf="@+id/txv_nom_Pokemon" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_nom_Pokemon" app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txv_vp_poderdos"
            android:autofillHints="@string/cp_poderdos" android:hint="@string/cp_poderdos"
            app:layout_constraintEnd_toEndOf="@+id/txv_vp_poderuno"
            app:layout_constraintStart_toStartOf="@+id/txv_vp_poderuno" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_vp_poderuno" app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txv_vp_fechaCaptura" android:autofillHints="@string/cp_fecha_cap"
            android:hint="@string/cp_fecha_cap"
            app:layout_constraintStart_toStartOf="@+id/txv_vp_poderdos"
            app:layout_constraintEnd_toEndOf="@+id/txv_vp_poderdos" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_vp_poderdos" app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txv_vp_nivel"
            android:autofillHints="@string/cp_nivel" android:hint="@string/cp_nivel"
            app:layout_constraintStart_toStartOf="@+id/txv_vp_fechaCaptura"
            app:layout_constraintEnd_toEndOf="@+id/txv_vp_fechaCaptura" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_vp_fechaCaptura" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/vp_eliminar"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:id="@+id/btn_eliminarPokemon"
            app:layout_constraintTop_toTopOf="@+id/btn_actualizarPokemon"
            app:layout_constraintBottom_toBottomOf="@+id/btn_actualizarPokemon"
            app:layout_constraintStart_toEndOf="@+id/btn_actualizarPokemon" android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:id="@+id/btn_actualizarPokemon"
            android:text="@string/vp_editar_pokemon" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.074" android:layout_marginTop="604dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txv_nom_Pokemon" android:autofillHints="@string/cp_nombre"
            android:hint="@string/cp_nombre"
            app:layout_constraintStart_toStartOf="@+id/txv_idPokemon"
            app:layout_constraintEnd_toEndOf="@+id/txv_idPokemon" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_idPokemon"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|number|numberDecimal"
            android:ems="10"
            android:id="@+id/txv_vp_latitud"
            app:layout_constraintEnd_toEndOf="@+id/txv_vp_nivel"
            app:layout_constraintStart_toStartOf="@+id/txv_vp_nivel"
            app:layout_constraintTop_toBottomOf="@+id/txv_vp_nivel" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" android:autofillHints="@string/ce_latitud"
            android:hint="@string/ce_latitud"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|number|numberDecimal"
            android:ems="10"
            android:id="@+id/txv_vp_longitud"
            app:layout_constraintStart_toStartOf="@+id/txv_vp_latitud"
            app:layout_constraintEnd_toEndOf="@+id/txv_vp_latitud" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_vp_latitud" app:layout_constraintHorizontal_bias="0.0"
            android:autofillHints="@string/ce_longitud" android:hint="@string/ce_longitud"/>
</android.support.constraint.ConstraintLayout>