<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearPokemon" android:background="#9A646060">

    <TextView
            android:layout_width="210dp"
            android:layout_height="37dp"
            android:id="@+id/txv_idEntrenador" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintVertical_bias="0.097"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txv_idPokemon"
            android:autofillHints="@string/cp_nombre" android:hint="@string/cp_nombre"
            app:layout_constraintStart_toStartOf="@+id/txv_idEntrenador"
            app:layout_constraintEnd_toEndOf="@+id/txv_idEntrenador" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_idEntrenador" app:layout_constraintHorizontal_bias="0.333"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txv_poderuno"
            android:autofillHints="@string/cp_poderuno" android:hint="@string/cp_poderuno"
            app:layout_constraintStart_toStartOf="@+id/txv_idPokemon"
            app:layout_constraintEnd_toEndOf="@+id/txv_idPokemon"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_idPokemon"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txv_poderdos"
            android:autofillHints="@string/cp_poderdos" android:hint="@string/cp_poderdos"
            app:layout_constraintStart_toStartOf="@+id/txv_poderuno"
            app:layout_constraintEnd_toEndOf="@+id/txv_poderuno" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_poderuno" app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txv_fecha_captura" android:autofillHints="@string/cp_fecha_cap"
            android:hint="@string/cp_fecha_cap"
            app:layout_constraintStart_toStartOf="@+id/txv_poderdos" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_poderdos"
            app:layout_constraintEnd_toEndOf="@+id/txv_poderdos" app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txv_nivel"
            android:autofillHints="@string/cp_nivel" android:hint="@string/cp_nivel"
            app:layout_constraintEnd_toEndOf="@+id/txv_fecha_captura"
            app:layout_constraintStart_toStartOf="@+id/txv_fecha_captura" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_fecha_captura" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/ve_crear_pokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_guardarPokemon"
            app:layout_constraintStart_toStartOf="@+id/txv_longitud"
            app:layout_constraintEnd_toEndOf="@+id/txv_longitud" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_longitud" app:layout_constraintHorizontal_bias="0.465"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txv_latitud"
            android:autofillHints="@string/ce_latitud" android:hint="@string/ce_latitud"
            app:layout_constraintStart_toStartOf="@+id/txv_nivel" app:layout_constraintEnd_toEndOf="@+id/txv_nivel"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txv_nivel"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txv_longitud"
            android:autofillHints="@string/ce_longitud" android:hint="@string/ce_longitud"
            app:layout_constraintStart_toStartOf="@+id/txv_latitud"
            app:layout_constraintEnd_toEndOf="@+id/txv_latitud" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_latitud" app:layout_constraintHorizontal_bias="0.0"/>
</android.support.constraint.ConstraintLayout>