<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuPrincipal" android:background="@drawable/pokemon_background">
    <Button
            android:text="@string/mp_gestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_mp_gestionar_entrenador" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.361"/>
    <Button
            android:text="@string/mp_crear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_mp_crear_entrenador" app:layout_constraintStart_toStartOf="@+id/btn_mp_gestionar_entrenador"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_mp_gestionar_entrenador" app:layout_constraintEnd_toEndOf="@+id/btn_mp_gestionar_entrenador"/>
    <Button
            android:text="@string/mp_mapa_pokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_mp_ver_mapaPokemon" app:layout_constraintStart_toStartOf="@+id/btn_mp_crear_entrenador"
            app:layout_constraintEnd_toEndOf="@+id/btn_mp_crear_entrenador" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_mp_crear_entrenador" app:layout_constraintHorizontal_bias="0.534"/>
</android.support.constraint.ConstraintLayout>