<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/pokemon_background">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txv_login_usuario"
            android:hint="@string/login_usuario" android:textColorHint="#FFFFFF" android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/txv_login_pass"
            app:layout_constraintEnd_toEndOf="@+id/txv_login_pass"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txv_login_pass"
            android:autofillHints="@string/login_usuario"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txv_login_pass"
            android:hint="@string/login_pass" android:textColorHint="#FFFFFF" android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/btn_login_log"
            app:layout_constraintEnd_toEndOf="@+id/btn_login_log"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/btn_login_log"
            app:layout_constraintHorizontal_bias="0.496" android:autofillHints="@string/login_pass"/>
    <Button
            android:text="@string/login_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login_log"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.571" android:backgroundTint="#5CFFFFFF"/>
</android.support.constraint.ConstraintLayout>